[package]
name = "sophross"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26"
egui_dock = "0.11"

eframe = { version = "*", features = ["default", "__screenshot"] }

egui_extras = { version = "*", features = ["default", "image", "svg"] }

env_logger = { version = "0.11.2", default-features = false, features = ["auto-color", "humantime"] }
#rusqlite = "0.31.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
